feat: decouple lessons from modules, add detailed staff lists and update swagger
